manuscript/parser.out
Grammar:

Rule 0     S' -> manuscript
Rule 1     manuscript -> part
Rule 2     manuscript -> manuscript part
Rule 3     part -> values
Rule 4     part -> command
Rule 5     command -> NAME params RPAREN
Rule 6     params -> values
Rule 7     params -> empty
Rule 8     params -> param
Rule 9     params -> params param
Rule 10    empty -> <empty>
Rule 11    param -> NAME values RPAREN
Rule 12    values -> STRING
Rule 13    values -> values STRING

Terminals, with rules where they appear:

NAME                 : 5 11
RPAREN               : 5 11
STRING               : 12 13
error                : 

Nonterminals, with rules where they appear:

command              : 4
empty                : 7
manuscript           : 2 0
param                : 8 9
params               : 5 9
part                 : 1 2
values               : 3 6 11 13


state 0

    (0) S' -> . manuscript
    (1) manuscript -> . part
    (2) manuscript -> . manuscript part
    (3) part -> . values
    (4) part -> . command
    (12) values -> . STRING
    (13) values -> . values STRING
    (5) command -> . NAME params RPAREN
    STRING          shift and go to state 5
    NAME            shift and go to state 6

    manuscript                     shift and go to state 1
    part                           shift and go to state 2
    values                         shift and go to state 3
    command                        shift and go to state 4

state 1

    (0) S' -> manuscript .
    (2) manuscript -> manuscript . part
    (3) part -> . values
    (4) part -> . command
    (12) values -> . STRING
    (13) values -> . values STRING
    (5) command -> . NAME params RPAREN
    STRING          shift and go to state 5
    NAME            shift and go to state 6

    part                           shift and go to state 7
    values                         shift and go to state 3
    command                        shift and go to state 4

state 2

    (1) manuscript -> part .
    STRING          reduce using rule 1 (manuscript -> part .)
    NAME            reduce using rule 1 (manuscript -> part .)
    $end            reduce using rule 1 (manuscript -> part .)


state 3

    (3) part -> values .
    (13) values -> values . STRING
  ! shift/reduce conflict for STRING resolved as shift
    NAME            reduce using rule 3 (part -> values .)
    $end            reduce using rule 3 (part -> values .)
    STRING          shift and go to state 8


state 4

    (4) part -> command .
    STRING          reduce using rule 4 (part -> command .)
    NAME            reduce using rule 4 (part -> command .)
    $end            reduce using rule 4 (part -> command .)


state 5

    (12) values -> STRING .
    STRING          reduce using rule 12 (values -> STRING .)
    NAME            reduce using rule 12 (values -> STRING .)
    $end            reduce using rule 12 (values -> STRING .)
    RPAREN          reduce using rule 12 (values -> STRING .)


state 6

    (5) command -> NAME . params RPAREN
    (6) params -> . values
    (7) params -> . empty
    (8) params -> . param
    (9) params -> . params param
    (12) values -> . STRING
    (13) values -> . values STRING
    (10) empty -> .
    (11) param -> . NAME values RPAREN
  ! shift/reduce conflict for NAME resolved as shift
    STRING          shift and go to state 5
    RPAREN          reduce using rule 10 (empty -> .)
    NAME            shift and go to state 9

    params                         shift and go to state 10
    values                         shift and go to state 11
    empty                          shift and go to state 12
    param                          shift and go to state 13

state 7

    (2) manuscript -> manuscript part .
    STRING          reduce using rule 2 (manuscript -> manuscript part .)
    NAME            reduce using rule 2 (manuscript -> manuscript part .)
    $end            reduce using rule 2 (manuscript -> manuscript part .)


state 8

    (13) values -> values STRING .
    STRING          reduce using rule 13 (values -> values STRING .)
    NAME            reduce using rule 13 (values -> values STRING .)
    $end            reduce using rule 13 (values -> values STRING .)
    RPAREN          reduce using rule 13 (values -> values STRING .)


state 9

    (11) param -> NAME . values RPAREN
    (12) values -> . STRING
    (13) values -> . values STRING
    STRING          shift and go to state 5

    values                         shift and go to state 14

state 10

    (5) command -> NAME params . RPAREN
    (9) params -> params . param
    (11) param -> . NAME values RPAREN
    RPAREN          shift and go to state 15
    NAME            shift and go to state 9

    param                          shift and go to state 16

state 11

    (6) params -> values .
    (13) values -> values . STRING
    RPAREN          reduce using rule 6 (params -> values .)
    NAME            reduce using rule 6 (params -> values .)
    STRING          shift and go to state 8


state 12

    (7) params -> empty .
    RPAREN          reduce using rule 7 (params -> empty .)
    NAME            reduce using rule 7 (params -> empty .)


state 13

    (8) params -> param .
    RPAREN          reduce using rule 8 (params -> param .)
    NAME            reduce using rule 8 (params -> param .)


state 14

    (11) param -> NAME values . RPAREN
    (13) values -> values . STRING
    RPAREN          shift and go to state 17
    STRING          shift and go to state 8


state 15

    (5) command -> NAME params RPAREN .
    STRING          reduce using rule 5 (command -> NAME params RPAREN .)
    NAME            reduce using rule 5 (command -> NAME params RPAREN .)
    $end            reduce using rule 5 (command -> NAME params RPAREN .)


state 16

    (9) params -> params param .
    RPAREN          reduce using rule 9 (params -> params param .)
    NAME            reduce using rule 9 (params -> params param .)


state 17

    (11) param -> NAME values RPAREN .
    RPAREN          reduce using rule 11 (param -> NAME values RPAREN .)
    NAME            reduce using rule 11 (param -> NAME values RPAREN .)


Conflicts:

shift/reduce conflict for STRING in state 3 resolved as shift
shift/reduce conflict for NAME in state 6 resolved as shift